# nyaon-trading-company

./: .gitignore  .paperclip.yaml  COMPANY.md  LICENSE  README.md  RISK_POLICY.md  pyproject.toml
agents/ceo/: AGENTS.md
agents/cro/: AGENTS.md
agents/ops/: AGENTS.md
agents/quant/: AGENTS.md
agents/trader/: AGENTS.md
nyaon_trading/: __main__.py  config.py
nyaon_trading/binance/: account.py  client.py  errors.py  market.py  orders.py
nyaon_trading/cli/: __init__.py  __main__.py  account.py  cancel.py  halt.py  klines.py  mode.py  place_order.py  signals.py  snapshot.py
nyaon_trading/recon/: snapshot.py
nyaon_trading/strategy/: mean_reversion.py  pipeline.py  trend.py
projects/connection-check/: PROJECT.md
projects/month-1-goal/: PROJECT.md
projects/nyaon-cli/: PROJECT.md
projects/strategy-testing/: PROJECT.md
skills/exchange-ops/: SKILL.md
skills/risk-gating/: SKILL.md
skills/self-improvement/: SKILL.md
skills/signal-pipeline/: SKILL.md
skills/strategy-rnd/: SKILL.md
state/.schemas/: connection_ok.json  incident.json  intent.json  mode.json  order.json  promotion-audit.json  proposal.json  signal.json  snapshot.json
tasks/add-nyaon-backtest/: TASK.md
tasks/ceo-connectivity-check/: TASK.md
tasks/ceo-weekly-retro/: TASK.md
tasks/create-nyaon-cli/: TASK.md
tasks/cro-tick/: TASK.md
tasks/nyaon-cli-port/: TASK.md
tasks/nyaon-cli-skill-author/: TASK.md
tasks/ops-reconcile/: TASK.md
tasks/promotion-audit/: TASK.md
tasks/quant-rnd/: TASK.md
tasks/quant-tick/: TASK.md
tasks/trader-tick/: TASK.md
(+17 files in other folders)
