[project]
name = "nyaon-trading"
version = "0.1.0"
description = "Nyaon Trading Company — Binance USDT-M connectivity and strategy execution"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "jsonschema>=4.22",
]

[project.scripts]
nyaon = "nyaon_trading.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "respx>=0.21",
    "freezegun>=1.5",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nyaon_trading"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
